[package]
name = "lineagedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oneshot = "0.1.6"
juniper = "0.15.10"
actix-web-lab = "0.20"
actix-cors = "0.6"
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
env_logger = "0.10"
log = "0.4"
