[package]
name = "lineagedb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lineagedb"
path = "src/main.rs"

[lib]
name = "lineagedb"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oneshot = "0.1.6"
juniper = "0.15.10"
actix-web-lab = "0.20"
actix-cors = "0.6"
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
env_logger = "0.10"
log = "0.4"
uuid = { version = "1.5.0", features = ["v4"] }
num-format = "0.4.4"
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.4.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
