[package]
name = "database"
version = "0.1.0"
edition = "2021"

[lib]
name = "database"
path = "src/lib.rs"
bench = false       # https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oneshot = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
env_logger = "0.10"
log = "0.4"
uuid = { version = "1.5.0", features = ["v4"] }
num-format = "0.4.4"
thiserror = "1.0.56"
flume = "0.11.0"
serde_bare = "=0.5.0"

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.18.2"


[[bench]]
name = "my_benchmark"
harness = false
