[package]
name = "database"
version = "0.1.0"
edition = "2021"

[lib]
name = "database"
path = "src/lib.rs"
bench = false       # https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oneshot = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
env_logger = "0.10"
log = "0.4"
uuid = { version = "1.5.0", features = ["v4"] }
num-format = "0.4.4"
thiserror = "1.0.56"
flume = "0.11.0"
crossbeam-skiplist = "0.1.3"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1.2.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.22.0"
aws-sdk-dynamodb = "1.22.0"
chrono = "*"
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
anyhow = { version = "1.0.86" }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
tracing = { version = "0.1.35", default-features = false, features = [
    "std",
    "attributes",
] }

[dev-dependencies]
threadpool = "1.8.1"
criterion = "0.5.1"
rstest = "0.18.2"
env_logger = "*"
test-log = "*"


[[bench]]
name = "request_manager"
harness = false

[[bench]]
name = "database"
harness = false
