[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lineagedb"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../../database" }
juniper = "0.15.10"
actix-web-lab = "0.20"
actix-cors = "0.6"
actix-web = "4.4"
env_logger = "0.10"
log = "0.4"
uuid = { version = "1.5.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.4.2"
flume = "0.11.0"
rand = "0.8.5"
threadpool = "1.8.1"
