[package]
name = "database-graphql-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lineagedb"
path = "src/main.rs"

[features]
default = ["tracing-log", "metrics"]
# Enables support for exporting OpenTelemetry metrics
metrics = ["opentelemetry/metrics", "opentelemetry_sdk/metrics"]
# Enables experimental support for OpenTelemetry gauge metrics
metrics_gauge_unstable = ["opentelemetry/otel_unstable"]

[dependencies]
database = { path = "../../database" }
juniper = "0.15.10"
actix-web-lab = "0.20"
actix-cors = "0.6"
actix-web = "4.4"
env_logger = "0.10"
log = "0.4"
uuid = { version = "1.5.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.4.2"
flume = "0.11.0"
rand = "0.8.5"
tokio-postgres = "0.7.10"

# Dependencies for tracing
tokio = { version = "1", features = ["full"] }
opentelemetry = { version = "0.24", default-features = false, features = [
    "trace",
] }
opentelemetry_sdk = { version = "0.24.1", default-features = false, features = [
    "trace",
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.17", features = [
    "http-proto",
    "reqwest-client",
    "metrics",
] }
tracing = { version = "0.1.35", default-features = false, features = [
    "std",
    "attributes",
] }
tracing-core = "0.1.28"
tracing-subscriber = { version = "0.3.0", default-features = false, features = [
    "registry",
    "std",
    "fmt",
] }
tracing-log = { version = "0.2.0", default-features = false, optional = true }
opentelemetry-semantic-conventions = "0.16"
tracing-opentelemetry = "0.25"
opentelemetry-stdout = { version = "0.5", features = ["trace", "metrics"] }
reqwest = "0.12.5"
